tests/NormalTests/paczka1/fuzzy1/88995144.err
Error in line 17: m8HVX S535 61,7
Error in line 18: m8HVX S909 69,5
Error in line 28: 2Xf5J S909 17,5
Error in line 23: R8qS S386 214,9
Error in line 30: 2Xf5J S535 97,9
Error in line 34: 2Xf5J S909 75,4
